# llm-jepa

./: .gitignore  CLAUDE.md  README.md  evaluate.py  evaluate_code_contests_pass1.py  evaluate_mbpp_pass1.py  evaluate_vllm.py  finetune.py  pyproject.toml  run.sh  run_llama_experiment.py  run_qwen3_8b.sh  stp.py
datasets/: spider_train.jsonl.train_split.jsonl
scripts/: code_contests_pass1_eval.sh  llama1b_jepa_synth.sh  llama1b_regular_synth.sh  prepare_code_contests_dataset.py  prepare_codeforces_dataset.py  prepare_mbpp_dataset.py  qwen2.5_7b_regular_gsm8k.sh  qwen3_8b_jepa_code_contests.sh  qwen3_8b_jepa_codeforces.sh  qwen3_8b_jepa_gsm8k.sh  qwen3_8b_regular_code_contests.sh  qwen3_8b_regular_codeforces.sh  qwen3_8b_regular_gsm8k.sh  qwen3_8b_regular_mbpp.sh  qwen3_jepa_gsm8k_debug.sh
scripts/patrik/: llama_1b_jepa_spider.sh  llama_1b_jepa_synth.sh  llama_1b_regular_spider.sh  llama_1b_regular_synth.sh  qwen2.5_7b_regular_gsm8k.sh  qwen3_8b_jepa_gsm8k.sh  qwen3_8b_regular_gsm8k.sh  qwen3_jepa_gsm8k_debug.sh
scripts/patrik/grotov_repl/: llama_1b_jepa_spider.sh  llama_1b_jepa_spider_2e-5.sh  llama_1b_jepa_spider_4e-5.sh  llama_1b_jepa_synth.sh  llama_1b_regular_spider.sh  llama_1b_regular_spider_2e-5.sh  llama_1b_regular_spider_4e-5.sh  llama_1b_regular_synth.sh
